chore: use google-java-format for dhis2-core DHIS2-15518 [2.38] (#14499)
* chore: use google formatter

* chore: format using google formatter